--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,13 @@
 		    <version>4.0.0.RELEASE</version>
 		    <scope>test</scope>
 		</dependency>		
+
+		<!-- E-mail -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4.7</version>
+		</dependency>
 		
 	</dependencies>
 	
@@ -198,6 +205,7 @@
 	            <enabled>false</enabled>
 	        </snapshots>
 	    </repository>
-	</repositories>	  
+	</repositories>
+	
   
 </project>
